--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@splidejs/splide": "^4.1.3",
     "sass": "^1.55.0",
     "scss": "^0.2.4",
     "vite": "^3.1.0"
