--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@splidejs/splide": "^4.1.3",
     "sass": "^1.55.0",
     "scss": "^0.2.4",
+    "swiper": "^8.4.3",
     "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "@splidejs/splide-extension-grid": "^0.4.1"
   }
 }
